Added google maps api controller and view

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -42,5 +43,8 @@
     <ion-nav-view>
 
     </ion-nav-view>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
+
   </body>
 </html>
